@@ -1,37 +1,42 @@
-local flammable = {
-    {liquid=false, cooldown=3, strenght=3, name="wood"},
-    {liquid=false, cooldown=2, strenght=7, name="coal"},
-    {liquid=false, cooldown=1, strenght=10, name="solid-fuel"},
+local function load_flammables()    
+    global.flammable = {
+        {fireball=false, cooldown=3, strength=3, name="wood"},
+        {fireball=false, cooldown=2, strength=7, name="coal"},
+        {fireball=false, cooldown=1, strength=10, name="solid-fuel"},
+    
+        {fireball=true, cooldown=10, strength=6, name="crude-oil-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.3},
+        {fireball=true, cooldown=10, strength=10, name="heavy-oil-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.8},
+        {fireball=true, cooldown=10, strength=10, name="light-oil-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.8},
+        {fireball=true, cooldown=10, strength=10, name="petroleum-gas-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.8},
+    
+        {fireball=true, cooldown=8, strength=15, name="rocket-fuel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=1},
+        {fireball=true, cooldown=10, strength=16, name="flamethrower-ammo", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.5},
+    
+        {fireball=false, cooldown=15, strength=2, name="grenade", explosion="grenade-explosion", explosion_radius=3},
+        {fireball=false, cooldown=15, strength=2, name="cluster-grenade", explosion="grenade-explosion", explosion_radius=3},
+    
+        {fireball=false, cooldown=5, strength=2, name="firearm-magazine", explosion="maticzplars-damage-explosion", explosion_radius=0.2},
+        {fireball=false, cooldown=5, strength=3, name="piercing-rounds-magazine", explosion="maticzplars-damage-explosion", explosion_radius=0.3},
+        {fireball=false, cooldown=5, strength=4, name="uranium-rounds-magazine", explosion="maticzplars-damage-explosion", explosion_radius=0.4},
+    
+        {fireball=false, cooldown=5, strength=2, name="shotgun-shell", explosion="maticzplars-damage-explosion", explosion_radius=0.2},
+        {fireball=false, cooldown=5, strength=3, name="piercing-shotgun-shell", explosion="maticzplars-damage-explosion", explosion_radius=0.3},
+    
+        {fireball=false, cooldown=5, strength=20, name="explosives", explosion="maticzplars-dynamite-explosion", explosion_radius=3},
+    }
+    
+    global.fluids =   
+    {
+        {strength=6, name="crude-oil", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.5},
+        {strength=10, name="light-oil", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.6},
+        {strength=10, name="heavy-oil", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.6},    
+        {strength=10, name="petroleum-gas", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.7}, -- not even a fluid lol
+    }
+end
 
-    {liquid=true, cooldown=10, strenght=6, name="crude-oil-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.3},
-    {liquid=true, cooldown=10, strenght=10, name="heavy-oil-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.8},
-    {liquid=true, cooldown=10, strenght=10, name="light-oil-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.8},
-    {liquid=true, cooldown=10, strenght=10, name="petroleum-gas-barrel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.8},
+script.on_init(load_flammables)
+script.on_configuration_changed(load_flammables)
 
-    {liquid=true, cooldown=8, strenght=15, name="rocket-fuel", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=1},
-    {liquid=true, cooldown=10, strenght=16, name="flamethrower-ammo", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.5},
-
-    {liquid=false, cooldown=15, strenght=2, name="grenade", explosion="grenade-explosion", explosion_radius=3},
-    {liquid=false, cooldown=15, strenght=2, name="cluster-grenade", explosion="grenade-explosion", explosion_radius=3},
-
-    {liquid=false, cooldown=5, strenght=2, name="firearm-magazine", explosion="maticzplars-damage-explosion", explosion_radius=0.2},
-    {liquid=false, cooldown=5, strenght=3, name="piercing-rounds-magazine", explosion="maticzplars-damage-explosion", explosion_radius=0.3},
-    {liquid=false, cooldown=5, strenght=4, name="uranium-rounds-magazine", explosion="maticzplars-damage-explosion", explosion_radius=0.4},
-
-    {liquid=false, cooldown=5, strenght=2, name="shotgun-shell", explosion="maticzplars-damage-explosion", explosion_radius=0.2},
-    {liquid=false, cooldown=5, strenght=3, name="piercing-shotgun-shell", explosion="maticzplars-damage-explosion", explosion_radius=0.3},
-
-    {liquid=false, cooldown=5, strenght=20, name="explosives", explosion="maticzplars-dynamite-explosion", explosion_radius=3},
-}
-
-local fluids =   
-{
-    {strenght=6, name="crude-oil", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.5},
-    {strenght=10, name="light-oil", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.6},
-    {strenght=10, name="heavy-oil", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.6},
-    -- not even a fluid lol
-    {strenght=10, name="petroleum-gas", explosion="maticzplars-rocket-fuel-explosion", explosion_radius=0.7},
-}
 
 ---@param event EventData.on_entity_damaged
 local function on_belt_fire(event)
@@ -42,7 +47,7 @@ local function on_belt_fire(event)
         local line = ent.get_transport_line(i)
         local contents = line.get_contents()
 
-        for _, fuel in ipairs(flammable) do
+        for _, fuel in ipairs(global.flammable) do
             local fname = fuel.name;
             if contents[fname] ~= nil then
                 local amount = contents[fname]
@@ -56,7 +61,7 @@ local function on_belt_fire(event)
                 end                  
                 
                 if global.cooldown[ent.unit_number][i] == nil then
-                    global.cooldown[ent.unit_number][i] = ( fuel.cooldown * (fuel.strenght / 10) * 3 ) / settings.global["maticzplars-belt-spread"].value
+                    global.cooldown[ent.unit_number][i] = ( fuel.cooldown * (fuel.strength / 10) * 3 ) / settings.global["maticzplars-belt-spread"].value
                 end   
 
                 if global.cooldown[ent.unit_number][i] <= 0 then
@@ -65,7 +70,7 @@ local function on_belt_fire(event)
                     ent.surface.create_entity({
                         name="fire-flame", 
                         position=ent.position, 
-                        initial_ground_flame_count=fuel.strenght * (amount/5)
+                        initial_ground_flame_count=fuel.strength * (amount/5)
                     })
 
                     if string.match(ent.type, "underground") ~= nil and ent.neighbours ~= nil then
@@ -117,7 +122,7 @@ local function on_container_fire(event)
     end
 
 
-    for _, fuel in ipairs(flammable) do
+    for _, fuel in ipairs(global.flammable) do
         local fname = fuel.name;
         local contents = ent.get_inventory(defines.inventory.chest)
         if contents == nil then
@@ -143,7 +148,7 @@ local function on_container_fire(event)
                 ent.surface.create_entity({
                     name="fire-flame", 
                     position=ent.position, 
-                    initial_ground_flame_count=fuel.strenght * math.min(amount/5, fuel.strenght / 4)
+                    initial_ground_flame_count=fuel.strength * math.min(amount/5, fuel.strength / 4)
                 })
             else
                 global.cooldown[ent.unit_number] = global.cooldown[ent.unit_number] - 1
@@ -169,7 +174,7 @@ local function on_container_fire(event)
 
                 radius = radius * 1.5
                 local r = math.ceil(radius) + 1
-                if fuel.liquid and settings.global["maticzplars-fireball"].value then                                
+                if fuel.fireball and settings.global["maticzplars-fireball"].value then                                
                     for x = -r, r, 2 do
                         for y = -r, r, 2 do
                             if math.sqrt(x*x + y*y) < radius then    
@@ -194,7 +199,7 @@ local function on_tank_fire(event)
         return
     end
 
-    for _, fuel in ipairs(fluids) do
+    for _, fuel in ipairs(global.fluids) do
         local fname = fuel.name;
         local contents = ent.get_fluid_contents()
 
@@ -217,7 +222,7 @@ local function on_tank_fire(event)
                 ent.surface.create_entity({
                     name="fire-flame", 
                     position=ent.position, 
-                    initial_ground_flame_count=fuel.strenght * math.min(amount/12500, 2)
+                    initial_ground_flame_count=fuel.strength * math.min(amount/12500, 2)
                 })
             else
                 global.cooldown[ent.unit_number] = global.cooldown[ent.unit_number] - 1
@@ -241,7 +246,7 @@ local function on_tank_fire(event)
                     end                                
                 end
 
-                if settings.global["maticzplars-fireball"].value then                    
+                if settings.global["maticzplars-fireball"].value and (fuel.fireball or fuel.fireball == nil) then                    
                     radius = radius * 3.5
                     local r = math.ceil(radius) + 1                        
                     for x = -r, r, 2 do
@@ -250,7 +255,7 @@ local function on_tank_fire(event)
                                 local pos = {x=0, y=0};
                                 pos.x = ent.position.x + x + 0.5 + math.random(-3,3)
                                 pos.y = ent.position.y + y + 0.5 + math.random(-3,3)
-                                ent.surface.create_entity({name="fire-flame", position=pos, initial_ground_flame_count=fuel.strenght * math.min(amount/12500, 2)})     
+                                ent.surface.create_entity({name="fire-flame", position=pos, initial_ground_flame_count=fuel.strength * math.min(amount/12500, 2)})     
                             end                              
                         end                                
                     end
@@ -320,3 +325,39 @@ script.on_event(
         {filter = "type", type = "electric-pole"}
     }
 )
+
+
+
+    remote.add_interface("maticzplars-flammables", {
+        ---@param name string
+        ---@param fire_strength int
+        ---@param fire_spread_cooldown int
+        ---@param make_fireball boolean
+        ---@param explosion_radius double
+        ---@param explosion_prototype string?
+        add_item = function (name, fire_strength, fire_spread_cooldown, make_fireball, explosion_radius, explosion_prototype)
+            table.insert(global.flammable, {                
+                fireball=make_fireball,
+                cooldown=fire_spread_cooldown,
+                strength=fire_strength,
+                name= name,
+                explosion_radius=explosion_radius,
+                explosion=explosion_prototype or "maticzplars-rocket-fuel-explosion"
+            })
+        end,
+
+        ---@param name string
+        ---@param fire_strength int
+        ---@param make_fireball boolean
+        ---@param explosion_radius double
+        ---@param explosion_prototype string?
+        add_fluid = function (name, fire_strength, make_fireball, explosion_radius, explosion_prototype)
+            table.insert(global.fluids, {                
+                fireball=make_fireball,
+                strength=fire_strength,
+                name= name,
+                explosion_radius=explosion_radius,
+                explosion=explosion_prototype or "maticzplars-rocket-fuel-explosion"
+            })
+        end
+    })
